edit fix-order-btn z-index = 1

--- a/public/store/css/my_style.css
+++ b/public/store/css/my_style.css
@@ -138,7 +138,7 @@ li
 {
   left:0px;
   width: 100%;
-  z-index: 9999999;
+  z-index: 1;
   padding:5px;
   background-color: #FFF;
 }
